ghc-4335c07/testsuite/tests/indexed-types/should_compile/T4356.hs
{-# LANGUAGE TypeFamilies #-}
module T4356 where

type family T t :: * -> * -> *
type instance T Bool = (->)

f :: T Bool Bool Bool
f = not
