ghc-4335c07/testsuite/tests/indexed-types/should_fail/T8227a.hs
{-# LANGUAGE TypeFamilies #-}
module T8227a where

type family V a :: *

type instance V Double    = Double
type instance V (a -> b)   = V b